--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body{
 }
 .name-logo{
     margin-left: -35%;
-    margin-right: 30%;
+    margin-right: 18%;
     font-size: 2rem;
 }
 .sub-logo{
@@ -50,21 +50,43 @@ body{
     border-radius: 5px;
 
     margin-top: -1%;
-    margin-left: -10%;
+    margin-left: 1%;
 
     outline: none;
     padding: 10px;
 }
 .lupa{
     width: 5%;
-    margin-left: 30%;
+    margin-left: 59%;
 }
 .lista{
     font-size: 1.5rem;
     cursor: pointer;
+    transition: 1s;
 }
 .lista:hover{
-    color: rgb(199, 199, 199);
+    color: rgb(209, 189, 189);
+    transition: 500ms;
+}
+.lista:hover i{
+    color: #ee4e4ed8;
+    transition: 500ms;
+}
+.explorar{
+    margin-right: 3%;
+    
+    font-size: 1.5rem;
+    cursor: pointer;
+
+    transition: 1s;
+}
+.explorar:hover{
+    color: rgb(209, 189, 189);
+    transition: 500ms;
+}
+.explorar:hover i{
+    color: rgba(27, 27, 27, 0.774);
+    transition: 500ms;
 }
 .segundo-header{
     background-color: #415481;
@@ -118,8 +140,8 @@ main{
     display: flex;
     justify-content: center;
 
-    width: 15%;
-    height: 73vh;
+    width: 15%; 
+    height: 85vh; 
 
     background-color: #415481;
     color: white;
@@ -129,12 +151,12 @@ main{
     border-right: 2px dashed white;
     border-bottom: 2px dashed white;
 
-    margin-top: 2%;
+    margin-top: .5%;
     
 }
 .generos{
     width: 75px;
-    padding: 10%;
+    padding: 14%;
     border-bottom: 2px solid white;
     border-width: 1px;
     list-style-type: none;
@@ -144,10 +166,12 @@ main{
     list-style-type: none;
     padding: 10%;
 }
-.minha-lista{
+#minha-lista{
     width: 85%;
     margin-left: 15%;
     color: gray;
+
+    transition: 1s;
 }
 .mensagem-inicial{
     width: 28%;
@@ -159,19 +183,28 @@ main{
     border-bottom: 2px dashed gray;
 
     font-size: 1.5rem;
-    display: none;
 }
 .segundo-texto{
     font-size: 1rem;
 }
- .conteudo-principal{
+.paginas{
+    margin-top: 2%;
+}
+.fa-plus{
+    position: absolute;
+    font-size: 1.3rem;
+    margin-left: 13.5%;
+    cursor: pointer;
+}
+
+#conteudo-principal{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     width: 85%;
     margin-left: 15%; 
     color: rgb(184, 184, 184);
 }  
-.conteudo-principal img{
+#conteudo-principal img{
     width: 170px;
     height: 240px;
     border: 2px solid white;
